--- a/frontend/package.json
+++ b/frontend/package.json
@@ -49,7 +49,8 @@
   "description": "",
   "main": "index.js",
   "devDependencies": {
-    "jest": "^27.5.1"
+    "jest": "^27.5.1",
+    "typescript": "^5.8.3"
   },
   "keywords": [],
   "author": "",
