--- a/frontend/package.json
+++ b/frontend/package.json
@@ -50,6 +50,8 @@
   "description": "",
   "main": "index.js",
   "devDependencies": {
+    "@types/react": "^19.1.8",
+    "@types/react-dom": "^19.1.6",
     "jest": "^27.5.1",
     "typescript": "^5.8.3"
   },
