--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,1 +1,33 @@
- 
+name: CI
+
+on:
+  push:
+    branches: [main, master]
+  pull_request:
+    branches: [main, master]
+
+jobs:
+  test:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      - name: Set up Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: 18.x
+
+      - name: Install dependencies
+        run: npm ci
+
+      - name: Run Hardhat tests
+        run: npx hardhat test
+
+      - name: Run solhint (if config exists)
+        run: |
+          if [ -f solhint.config.js ] || [ -f .solhint.json ]; then
+            npx solhint 'contracts/**/*.sol';
+          else
+            echo 'No solhint config found, skipping Solidity lint.';
+          fi 
